--- a/LR6/LR6/Views/Home/Index.cshtml
+++ b/LR6/LR6/Views/Home/Index.cshtml
@@ -4,4 +4,9 @@
 
 <div class="text-center">
     <h1 class="display-4">Лабораторна робота №5</h1>
+    <div class="index-flexbox">
+        <div class="index-item">
+            <h3>ASP.NET Core MVC застосунок, що дає змогу запускати інші лабораторні роботи.</h3>
+        </div>
+    </div>
 </div>
