--- a/LR6/LR6/Views/Home/Profile.cshtml
+++ b/LR6/LR6/Views/Home/Profile.cshtml
@@ -4,31 +4,24 @@
     <div class="row">
         <div class="col-md-12">
             <div class="profile-header">
-                <h2>Edit Profile: @Model.FullName</h2>
+                <h2>Profile: @Model.FullName</h2>
             </div>
-            <form asp-action="UpdateProfile" method="post">
-                <div class="form-group">
-                    <label asp-for="Username"></label>
-                    <input asp-for="Username" class="form-control" value="@Model.Username" />
-                    <span asp-validation-for="Username" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="FullName"></label>
-                    <input asp-for="FullName" class="form-control" value="@Model.FullName" />
-                    <span asp-validation-for="FullName" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="PhoneNumber"></label>
-                    <input asp-for="PhoneNumber" class="form-control" value="@Model.PhoneNumber" />
-                    <span asp-validation-for="PhoneNumber" class="text-danger"></span>
-                </div>
-                <div class="form-group">
-                    <label asp-for="EmailAddress"></label>
-                    <input asp-for="EmailAddress" class="form-control" value="@Model.EmailAddress" />
-                    <span asp-validation-for="EmailAddress" class="text-danger"></span>
-                </div>
-                <button type="submit" class="btn btn-success">Save Changes</button>
-            </form>
+            <div class="form-group">
+                <label asp-for="Username"></label>
+                <p class="form-control-static">@Model.Username</p>
+            </div>
+            <div class="form-group">
+                <label asp-for="FullName"></label>
+                <p class="form-control-static">@Model.FullName</p>
+            </div>
+            <div class="form-group">
+                <label asp-for="PhoneNumber"></label>
+                <p class="form-control-static">@Model.PhoneNumber</p>
+            </div>
+            <div class="form-group">
+                <label asp-for="EmailAddress"></label>
+                <p class="form-control-static">@Model.EmailAddress</p>
+            </div>
         </div>
     </div>
 </div>
