--- a/LR6/LR6/Views/Shared/_Layout.cshtml
+++ b/LR6/LR6/Views/Shared/_Layout.cshtml
@@ -23,7 +23,7 @@
                         @if (User.Identity.IsAuthenticated)
                         {
                             <li class="nav-item">
-                                <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Profile">Профіль</a>
+                                <a class="nav-link text-dark" asp-area="" asp-controller="Account" asp-action="Profile">Профіль</a>
                             </li>
                             <li class="nav-item">
                                 <a class="nav-link text-dark" href="@Url.Action("Labs", "Lab")">Лабораторні роботи</a>
